<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VerProducto">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <ImageView
            android:id="@+id/profileIvCB"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_add_image" />

    </LinearLayout>






    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="125dp"
        app:cardCornerRadius="20dp"


        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"

            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/viewNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textNombre"
                android:layout_marginTop="-8dp"
                android:textSize="17dp"/>

            <TextView
                android:id="@+id/txtNombreCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginBottom="2dp"
                android:labelFor="@id/viewNombre"
                android:layout_marginLeft="30dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="#000000"
                android:inputType="textMultiLine"/>


        </LinearLayout>


    </androidx.cardview.widget.CardView>





    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/viewPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textPrecio"
                android:layout_gravity="center"
                android:textColor="@color/red"
                android:textSize="19dp"/>
            <TextView
                android:id="@+id/txtPrecioCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:ems="10"
                android:labelFor="@id/viewPrecio"
                android:inputType="numberDecimal"
                android:layout_marginLeft="40dp"
                android:textStyle="bold"
                android:textSize="28sp"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/viewFechaExp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textFechaExp"
                android:layout_gravity="center"
                android:textSize="17dp"/>
            <!---18-->
            <TextView
                android:id="@+id/txtFechaExpCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:labelFor="@id/viewFechaExp"
                android:inputType="date"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="20sp"/>


        </LinearLayout>



    </androidx.cardview.widget.CardView>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center">

            <TextView
                android:layout_marginStart="130dp"
                android:id="@+id/txtCodigoBarraCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textCodigoBarra"
                android:layout_gravity="center"
                android:textSize="17dp"/>
            <!---18-->



        </LinearLayout>









</LinearLayout>